welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:52: error: too many arguments for method motif4: ()Unit
	motif4(2)
              ^PatternPicture:57: error: too many arguments for method droite: ()Unit
	droite(2)
              ^PatternPicture:58: error: too many arguments for method motif4: ()Unit
	motif4(2)
              ^